second commit i guess

--- a/vsBU.html
+++ b/vsBU.html
@@ -31,7 +31,7 @@
 
         <div class="buttons">
 
-            <a href="or.html">
+            <a href="index.html">
                 <div class="tlacidlo">
                     <p class="pismo"> OR/Defend </p>
                 </div>
