--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="buttons">
 
-            <a href="or.html">
+            <a href="index.html">
                 <div class="tlacidlo tlacidloStlacene">
                     <p class="pismo"> OR/Defend </p>
                 </div>
