--- a/vsUTG.html
+++ b/vsUTG.html
@@ -45,7 +45,7 @@
 
         <div class="buttons">
 
-            <a href="or.html">
+            <a href="index.html">
                 <div class="tlacidlo">
                     <p class="pismo"> OR/Defend </p>
                 </div>
