--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>OR/Defend</title>
     <link href="style.css" rel="stylesheet">
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/icon.svg">
 
 </head>
 
