--- a/vsMP.html
+++ b/vsMP.html
@@ -2,82 +2,77 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
-    <title>vs MP</title>
+    <title>OR/Defend</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" href="img/icon.png">
 
 </head>
 
 <body>
-    <div class="vsetko">
-        <div class="ranges">
-            <div class="container">
 
-                <div class="range-row1">
-                    <p> CO </p>
-                    <img src="img/David - vsMP - CO.png" alt="MP">
-                </div>
-                <div class="range-row1">
-                    <p> BU </p>
-                    <img src="img/David - vsMP - BU.png" alt="CO">
-                </div>
-                <div class="range-row1">
-                    <p> SB </p>
-                    <img src="img/David - vsMP - SB.png" alt="MP">
-                </div>
-
-            </div>
-
-            <div class="container">
-
-                <div class="range-row1">
-                    <p> BB </p>
-                    <img src="img/David - vsMP - BB.png" alt="SB">
-                </div>
-
-
-            </div>
-        </div>
-
+    <div class="grid">
 
         <div class="buttons">
 
             <a href="index.html">
-                <div class="tlacidlo">
-                    <p class="pismo"> OR/Defend </p>
+                <div class="tlacidlo tlacidloStlacene">
+                    <p class="pismo-tlacidlo"> OR/Defend </p>
                 </div>
             </a>
             <a href="vsUTG.html">
                 <div class="tlacidlo">
-                    <p class="pismo"> vs UTG </p>
+                    <p class="pismo-tlacidlo"> vs UTG </p>
                 </div>
             </a>
             <a href="vsMP.html">
-                <div class="tlacidlo tlacidloStlacene">
-                    <p class="pismo"> vs MP </p>
+                <div class="tlacidlo">
+                    <p class="pismo-tlacidlo"> vs MP </p>
                 </div>
             </a>
             <a href="vsCO.html">
                 <div class="tlacidlo">
-                    <p class="pismo"> vs CO </p>
+                    <p class="pismo-tlacidlo"> vs CO </p>
                 </div>
             </a>
             <a href="vsBU.html">
                 <div class="tlacidlo">
-                    <p class="pismo"> vs BU </p>
+                    <p class="pismo-tlacidlo"> vs BU </p>
                 </div>
             </a>
             <a href="vsSB.html">
                 <div class="tlacidlo">
-                    <p class="pismo"> vs SB </p>
+                    <p class="pismo-tlacidlo"> vs SB </p>
                 </div>
             </a>
 
+        </div>
 
+        <div class="range-row1">
+            <p> UTG/MP </p>
+            <img src="img/OR-Defend - UTG-MP.png" alt="UTG">
+        </div>
 
+        <div class="range-row1">
+            <p> CO </p>
+            <img src="img/David - OR-Defend - CO.png" alt="UTG">
+        </div>
 
+        <div class="range-row1">
+            <p> BU </p>
+            <img src="img/David - OR-Defend - BTN.png" alt="UTG">
+        </div>
+
+        <div>
 
         </div>
+
+        <div class="range-row1">
+            <p> SB </p>
+            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+        </div>
+
     </div>
 
 </body>
