--- a/vsUTG.html
+++ b/vsUTG.html
@@ -17,12 +17,12 @@
         <div class="buttons">
 
             <a href="index.html">
-                <div class="tlacidlo tlacidloStlacene">
+                <div class="tlacidlo">
                     <p class="pismo-tlacidlo"> OR/Defend </p>
                 </div>
             </a>
             <a href="vsUTG.html">
-                <div class="tlacidlo">
+                <div class="tlacidlo tlacidloStlacene">
                     <p class="pismo-tlacidlo"> vs UTG </p>
                 </div>
             </a>
@@ -66,6 +66,16 @@
 
         <div>
 
+        </div>
+
+        <div class="range-row1">
+            <p> SB </p>
+            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+        </div>
+
+        <div class="range-row1">
+            <p> SB </p>
+            <img src="img\David - OR-Defend - SB.png" alt="UTG">
         </div>
 
         <div class="range-row1">
