cc dorobene komplet

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 
         <div class="range-row1">
             <p> UTG/MP </p>
-            <img src="img/OR-Defend - UTG-MP.png" alt="UTG">
+            <img src="img/OpenRaise/utgDefend.png" alt="UTG">
         </div>
 
         <div class="range-row1">
             <p> CO </p>
-            <img src="img/David - OR-Defend - CO.png" alt="UTG">
+            <img src="img/OpenRaise/coDefend.png" alt="UTG">
         </div>
 
         <div class="range-row1">
             <p> BU </p>
-            <img src="img/David - OR-Defend - BTN.png" alt="UTG">
+            <img src="img/OpenRaise/sbDefend.png" alt="UTG">
         </div>
 
         <div>
@@ -70,11 +70,11 @@
 
         <div class="range-row1">
             <p> SB </p>
-            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+            <img src="img/OpenRaise/sbDefend.png" alt="UTG">
         </div>
 
     </div>
 
 </body>
 
-</html>
+</html>/
