--- a/vsSB.html
+++ b/vsSB.html
@@ -50,27 +50,8 @@
         </div>
 
         <div class="range-row1">
-            <p> UTG/MP </p>
-            <img src="img/OR-Defend - UTG-MP.png" alt="UTG">
-        </div>
-
-        <div class="range-row1">
-            <p> CO </p>
-            <img src="img/David - OR-Defend - CO.png" alt="UTG">
-        </div>
-
-        <div class="range-row1">
-            <p> BU </p>
-            <img src="img/David - OR-Defend - BTN.png" alt="UTG">
-        </div>
-
-        <div>
-
-        </div>
-
-        <div class="range-row1">
-            <p> SB </p>
-            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+            <p> BB </p>
+            <img src="img/CC/bbVSsb.png" alt="UTG">
         </div>
 
     </div>
