--- a/vsUTG.html
+++ b/vsUTG.html
@@ -50,18 +50,18 @@
         </div>
 
         <div class="range-row1">
-            <p> UTG/MP </p>
-            <img src="img/OR-Defend - UTG-MP.png" alt="UTG">
+            <p> MP </p>
+            <img src="img/CC/mpVSutg.png" alt="UTG">
         </div>
 
         <div class="range-row1">
             <p> CO </p>
-            <img src="img/David - OR-Defend - CO.png" alt="UTG">
+            <img src="img/CC/coVSutg.png" alt="UTG">
         </div>
 
         <div class="range-row1">
             <p> BU </p>
-            <img src="img/David - OR-Defend - BTN.png" alt="UTG">
+            <img src="img/CC/btnVSutg.png" alt="UTG">
         </div>
 
         <div>
@@ -70,17 +70,12 @@
 
         <div class="range-row1">
             <p> SB </p>
-            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+            <img src="img/CC/sbVSutg.png" alt="UTG">
         </div>
 
         <div class="range-row1">
-            <p> SB </p>
-            <img src="img\David - OR-Defend - SB.png" alt="UTG">
-        </div>
-
-        <div class="range-row1">
-            <p> SB </p>
-            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+            <p> BB </p>
+            <img src="img/CC/bbVSutg.png" alt="UTG">
         </div>
 
     </div>
