--- a/vsCO.html
+++ b/vsCO.html
@@ -50,28 +50,20 @@
         </div>
 
         <div class="range-row1">
-            <p> UTG/MP </p>
-            <img src="img/OR-Defend - UTG-MP.png" alt="UTG">
-        </div>
-
-        <div class="range-row1">
-            <p> CO </p>
-            <img src="img/David - OR-Defend - CO.png" alt="UTG">
-        </div>
-
-        <div class="range-row1">
             <p> BU </p>
-            <img src="img/David - OR-Defend - BTN.png" alt="UTG">
-        </div>
-
-        <div>
-
+            <img src="img/CC/btnVSco.png" alt="UTG">
         </div>
 
         <div class="range-row1">
             <p> SB </p>
-            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+            <img src="img/CC/sbVSco.png" alt="UTG">
         </div>
+
+        <div class="range-row1">
+            <p> BB </p>
+            <img src="img/CC/bbVSco.png" alt="UTG">
+        </div>
+
 
     </div>
 
