--- a/vsMP.html
+++ b/vsMP.html
@@ -50,18 +50,18 @@
         </div>
 
         <div class="range-row1">
-            <p> UTG/MP </p>
-            <img src="img/OR-Defend - UTG-MP.png" alt="UTG">
-        </div>
-
-        <div class="range-row1">
             <p> CO </p>
-            <img src="img/David - OR-Defend - CO.png" alt="UTG">
+            <img src="img/CC/coVSmp.png" alt="UTG">
         </div>
 
         <div class="range-row1">
             <p> BU </p>
-            <img src="img/David - OR-Defend - BTN.png" alt="UTG">
+            <img src="img/CC/btnVSmp.png" alt="UTG">
+        </div>
+
+        <div class="range-row1">
+            <p> SB </p>
+            <img src="img/CC/sbVSbu.png" alt="UTG">
         </div>
 
         <div>
@@ -69,8 +69,8 @@
         </div>
 
         <div class="range-row1">
-            <p> SB </p>
-            <img src="img\David - OR-Defend - SB.png" alt="UTG">
+            <p> BB </p>
+            <img src="img/CC/bbVSmp.png" alt="UTG">
         </div>
 
     </div>
